2007-12-15  Inge Wallin  <inge@lysator.liu.se>

	Mini fixes
	* src/lib/MarbleWidget.h: Fix apidox typo.
	* src/lib/geodata/data/GeoDataIconStyle.h: Add ingwa as copyright holder

2007-13-11  Torsten Rahn  <rahn@kde.org>

    * src/lib/PlaceMarkLayout.{h,cpp}: Speed-up and better code

2007-12-11  Torsten Rahn  <rahn@kde.org>

    One single major bug left for the flat map and 
    the flat map is now as fast as the globe.

    * src/lib/MeasureTool.cpp: degX,Y -> lon, lat

    * src/lib/MarbleWidget.cpp:
       - Some fix by Jan Becker about screenCoordinates(...)
       - degX,Y -> lon, lat
    * src/lib/VectorMap.{h,cpp}:
       - Speedup by avoiding Quaternion representation for
         rectangular projection
       - degX,Y -> lon, lat
    * src/lib/PlaceMarkLayout.cpp:
       - Fixing "two few placemarks" bug for rect. projection
       - Speedup by avoiding Quaternion representation for
         rect. projection
       - degX,Y -> lon, lat

2007-12-11  Torsten Rahn  <rahn@kde.org>

    Patch set by Jan Becker <tahoma@gmx.de>:
    * src/lib/MeasureTool.cpp:
      Bugfix to make Measuretool mostly work in 
      Equirectangular projection (tiny small issues
      which aren't relevant for now still remain)
    * src/lib/MarbleWidget.{h,cpp}:
      virtual void customPaint() and bugfix for
      considering equirectangular projection in 
      screenCoordinates(...)
    * src/lib/ClipPainter.{h,cpp}: 
      Introduction of setClipping(bool) and hasClipping()

2007-12-10  Torsten Rahn  <rahn@kde.org>

    * Renaming the class "GeoPoint" -> "GeoDataPoint"

2007-12-06  Torsten Rahn  <rahn@kde.org>

    Very nice patch set by Jan Becker <tahoma@gmx.de>. From his own description:

    * TextureMappers does not create/own a TileLoader, they use one
    * MarbleWidgetInputHandler has been stripped down to an interface and 
MarbleWidgetDefaultInputHandler derives from it and is the InputHandler 
default implementation